--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StudyHelperMDApp"
         tools:targetApi="31">
+
+
+        <!-- Google Maps API Key -->
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyAc9IwSORGYGrI75QgwasyrsFBe3HykIes" />
 
         <!-- LoginActivity as the launcher activity -->
         <activity
@@ -36,9 +44,9 @@
             android:name=".TaskManagementActivity"
             android:exported="true" />
 
-        <!-- UpcomingTasksActivity -->
+        <!-- CreateGroupActivity -->
         <activity
-            android:name=".UpcomingTasksActivity"
+            android:name=".CreateGroupActivity"
             android:exported="true" />
 
         <!-- SettingsActivity -->
